tests/error/type_match/base_case_implicit_conversion1.bz
// error: unable to match expression of type 'u32' to 'u16'
function test()
{
	let _: u16 = 0u32;
}
